House scene (issue: responsive dimensions, scale too small)

--- a/style.css
+++ b/style.css
@@ -25,3 +25,21 @@ body {
     width: 100%;
     height: 100%;
 }
+
+#prompt {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: calc(100% / 3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#prompt div {
+    width: 98%;
+    height: 98%;
+    overflow-y: scroll;
+    color: #fff;
+}
